--- a/trunk/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/peterdwarf/elf/Elf_Common.java=UTF-8
+encoding//src/com/peterdwarf/gui/PeterDwarfPanel.java=UTF-8
