--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,35 +1,65 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.peter</groupId>
-  <artifactId>peter-dwarf</artifactId>
-  <version>20131001</version>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.jcraft</groupId>
-  		<artifactId>jzlib</artifactId>
-  		<version>1.1.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.peter</groupId>
-  		<artifactId>peter-ar</artifactId>
-  		<version>20130520</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.peter</groupId>
-  		<artifactId>peter-swing</artifactId>
-  		<version>20131001</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.peter</groupId>
+	<artifactId>peter-dwarf</artifactId>
+	<version>20131001</version>
+	<developers>
+		<developer>
+			<id>peter</id>
+			<name>Peter</name>
+			<email>mcheung63@hotmail.com</email>
+			<url>http://peter.kingofcoders.com</url>
+			<organization>None</organization>
+			<organizationUrl>None</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>founder</role>
+			</roles>
+			<timezone>+8</timezone>
+			<properties>
+				<picUrl>http://s.gravatar.com/avatar/09ab35661cb9508c728f11e3b62d24ba?s=80</picUrl>
+			</properties>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>GNU GENERAL PUBLIC LICENSE, version 3</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+			<comments>An GNU opensource license</comments>
+		</license>
+	</licenses>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jzlib</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.peter</groupId>
+			<artifactId>peter-ar</artifactId>
+			<version>20130520</version>
+		</dependency>
+		<dependency>
+			<groupId>com.peter</groupId>
+			<artifactId>peter-swing</artifactId>
+			<version>20131001</version>
+		</dependency>
+	</dependencies>
+	<name>peter-dwarf</name>
+	<url>https://code.google.com/p/peter-dwarf/</url>
+	<description>A java library to read the dwarf debug specification</description>
 </project>
