--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 			<version>20140129</version>
 		</dependency>
 		<dependency>
-			<groupId>com.peter</groupId>
+			<groupId>com.github.mcheung63</groupId>
 			<artifactId>peter-swing</artifactId>
 			<version>20140721</version>
 		</dependency>
